Added EdgeList graph representation